# clockscape

./: README.md  RELEASE_PROCESS.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main_new.rs  music_player.rs  system_info.rs
src/components/: FlipClock.tsx
