[package]
name = "clockscape"
version = "0.1.0"
description = "A desktop clock app with system monitoring"
authors = ["Era360"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clockscape_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
sysinfo = "0.30.5"
mpris = { version = "2.0.1", optional = true }
rodio = { version = "0.17.3", optional = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
linux-music = ["mpris"]
windows-music = ["rodio"]

[target.'cfg(target_os = "linux")'.dependencies]
mpris = { version = "2.0.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "winerror",
    "windef",
    "winnt",
    "winbase",
    "processthreadsapi",
    "minwindef",
] }
windows = { version = "0.48", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
] }
